[project]
name = "docs"
version = "0.1.0"
description = "Documentation for Blackdagger"
dependencies = [
    "sphinx==5.3.0",
    "sphinx-rtd-theme==2.0.0",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-intl>=2.2.0",
]
requires-python = ">= 3.11"

[tool.rye.scripts]
serve = "sphinx-autobuild --watch . --port 8000 --open-browser --delay 1 source build/html"
build = "sphinx-build -b html -D language='en' source/ build/html"